--- a/dataset-fetcher/src/main/resources/templates/index.html
+++ b/dataset-fetcher/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <!--/*@thymesVar id="portals" type="java.util.Iterator<org.diceresearch.dataseturlfetcher.model.Portal>"*/-->
+                <!--/*@thymesVar id="portals" type="java.util.Iterator<org.diceresearch.datasetfetcher.model.Portal>"*/-->
                 <div th:each="portal:${portals}">
                     <tr th:object="${portal}">
                         <td>
