--- a/dataset-fetcher/src/main/resources/templates/index.html
+++ b/dataset-fetcher/src/main/resources/templates/index.html
@@ -20,9 +20,11 @@
                 <thead>
                 <tr>
                     <th>play/pause</th>
+                    <th>status</th>
                     <th>name</th>
                     <th>Last not fetched</th>
                     <th>high</th>
+                    <th>step</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -37,9 +39,11 @@
                                 <i class="fa fa-pause" aria-hidden="true"></i>
                             </button>
                         </td>
+                        <td><p th:text="*{workingStatus}">workingStatus</p></td>
                         <td><p th:text="*{name}">name</p></td>
                         <td><input th:id="'lnf_'+ *{id}" th:value="*{lastNotFetched}"/></td>
                         <td><input th:id="'high_'+ *{id}" th:value="*{high}"/></td>
+                        <td><input th:id="'step_'+ *{id}" th:value="*{step}"/></td>
                     </tr>
                 </div>
                 </tbody>
